Split websocket session registry and sender